--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Author of document -->
   <meta name="author" content="Chris Brody @ Codify Academy">
   <!-- Title -->
-  <title>Google Replica</title>
+  <title>Google Replica homepage!</title>
   <!-- Font Awesome-->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel ="stylesheet">
   <!-- Author Custom CSS -->
