--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <meta name="keywords" content="Codify Academy, Google Replication">
   <!-- Author of document -->
   <meta name="author" content="Chris Brody @ Codify Academy">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!-- Title -->
   <title>Google Replica homepage!</title>
   <!-- Font Awesome-->
